StriFixed a timeline alignment bug in FF.

--- a/src/stylesheets/partials/timelines.less
+++ b/src/stylesheets/partials/timelines.less
@@ -91,6 +91,7 @@
 			position: absolute;
 			top: 0;
 			bottom: 0;
+			left: 0;
 		}
 
 		> dt {
